feat: Adição do fluxo de usuário. Método Create.
