# BackEnd/Models/Usuario.js
@@ -1,0 +1,39 @@
+import mongoose from "../Db/conn.js";
+
+const { Schema } = mongoose;
+
+const usuarioSchema = new Schema(
+  {
+    nome: {
+      type: String,
+      required: true,
+      trim: true,
+    },
+    email: {
+      type: String,
+      required: true,
+      unique: true,
+      trim: true,
+      lowercase: true,
+    },
+    senha: {
+      type: String,
+      required: true,
+      select: false,
+    },
+    reset_token: {
+      type: String,
+      select: false,
+    },
+    reset_token_expire: {
+      type: Date,
+      select: false,
+    },
+  },
+  {
+    timestamps: true,
+  },
+);
+
+const Usuario = mongoose.model("Usuario", usuarioSchema);
+export default Usuario;
