# BackEnd/Routes/usuario.routes.js
@@ -1,0 +1,8 @@
+import { Router } from "express";
+import UsuarioController from "../Controllers/UsuarioController.js";
+
+const usuarioRoutes = Router();
+
+usuarioRoutes.post("/", UsuarioController.registrarUsuario);
+
+export default usuarioRoutes;
