# BackEnd/index.js
@@ -1,8 +1,9 @@
 import express from "express";
 import cors from "cors";
-import routes from "./Routes/routes.js";
 import swaggerUi from "swagger-ui-express";
 import { createRequire } from "node:module";
+import tarefaRoutes from "./Routes/tarefa.routes.js";
+import usuarioRoutes from "./Routes/usuario.routes.js";
 
 // suporte para importar arquivos JSON usando Esmodules
 const require = createRequire(import.meta.url);
@@ -23,8 +24,10 @@ app.use(cors({
 app.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // ligar o express com as rotas
-app.use("/Todo/Tarefas", routes);
+app.use("/Todo/Tarefas", tarefaRoutes);
+app.use("/Todo/Usuarios", usuarioRoutes);
 
+// porta da api
 app.listen(5000, () => {
     console.log("Servidor rodando na porta 5000");
 });
